css/style.css
/**************************** BODY *************************/
body{
	/* link for blue color code: https://htmlcolorcodes.com/colors/shades-of-blue/  */
	background-color: #4169E1;
	font-family: Arial;
}

/**************************** NAVIGATION *************************/
.nav ul{
		list-style: none;
		text-align: center;
		padding: 0;
		margin: 0;
	}
	
.nav li {
		display:inline-block;
	}
	
.nav a {
		text-decoration: none;
		color: white;
		width: 100px;
		display: block;
		padding: 15px;
		font-size: 20px;
		font-family: Arial, Helvetica, sans-serif;
		transition: 0.4s;
	}

	.logo {
		width: 100px;
		height: 100px;
		border-radius: 10px;
	}

	.navLoginButton {
		background-color: lightgrey;
		border: none;
		color: white;
		padding: 13px 30px;
		text-align: center;
		text-decoration: none;
		display: inline-block;
		font-size: 16px;
		margin: 4px 2px;
		cursor: pointer;
		border-radius:10px;
	  }

/**************************** FORMS *************************/
/* For Mobile Phones */
@media (max-width:480px) {
	.contact-form, .register-form {
		display: block;
		margin-left: auto;
		margin-right: auto;
		width: 100%;
	}
}

/* For Tablets */
@media (max-width:960px) {
	.contact-form, .register-form  {
		display: block;
		margin-left: auto;
		margin-right: auto;
		width: 80%;
	}
}

/* For Laptops/Desktop */
@media (min-width:1025px) {
	.contact-form, .register-form, .form {
		display: block;
		margin-left: auto;
		margin-right: auto;
		width: 50%;
	}
}

input {
	width: 100%;
    padding: 12px;
    margin: 5px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

/**************************** CONTAINER *************************/
.container{
	margin: 50px 10px;
	padding: 50px;
}

/* sets same height and width for all images */
.gallery img {
	float: left;
	width:  250px;
	height: 250px;
	object-fit: cover;
}

.pictures{
	margin: 10px 50px; 
}

/* centers lightbox */
.gallery {
	margin: auto;
	width: 60%;	
	padding: 10px;
	}

